# docker

./: .drone.yml  Dockerfile.certbot-route53-postgres  Dockerfile.docker-node  Dockerfile.node  Dockerfile.odyssey  README.md  envoy.Dockerfile  node-12.Dockerfile  node-14.Dockerfile  node-15.Dockerfile  node-16.Dockerfile  node-18.Dockerfile  node-20.Dockerfile  node-22.Dockerfile  node-24-pc.Dockerfile  node-24.Dockerfile
azcopy/: Dockerfile
blackbox-exporter/: Dockerfile  blackbox.yml
docker-node/: Dockerfile  docker  docker-image-tags  docker-login  entrypoint  files-changed  pull-docker-image  push-docker-sha  push-docker-tag  sanitize-tag
envoy/: Dockerfile  entrypoint  oidc.wasm
fetch-certificate/: Cargo.toml  Dockerfile
fetch-certificate/src/: main.rs
file-change-hook/: Dockerfile  file-change-hook
kubectl/: Dockerfile  drone
letsencrypt/: Dockerfile  README.md  entrypoint  fetch-certificate.sh  index.js  letsencrypt  package-lock.json  package.json
livingdocs-editor-base/: 12.Dockerfile  14.Dockerfile  15.Dockerfile  16.Dockerfile  18.Dockerfile  20.Dockerfile  22.Dockerfile  24.Dockerfile
livingdocs-server-base/: 12.Dockerfile  14.Dockerfile  15.Dockerfile  16.Dockerfile  18.Dockerfile  20.Dockerfile  22.Dockerfile  24-pc.Dockerfile  24.Dockerfile  Dockerfile  imagemagick-policy.xml  wait-for-services
maintenance-page/: Dockerfile  Readme.md
mkcert/: Dockerfile  README.md  drone
odyssey/: Dockerfile  debian.Dockerfile  entrypoint.sh  odyssey.conf  odyssey.proxy.conf  setup_password_lookup_function.sh
pgbouncer/: Dockerfile  entrypoint  (+2 more)
(+17 files in other folders)
